--- a/test/index.html
+++ b/test/index.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>QUnit basic example</title>
-  <link rel="stylesheet" href="../lib/qunit-1.12.0/qunit.css">
+  <link rel="stylesheet" href="../bower_components/qunit/qunit/qunit.css">
 </head>
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
-  <script src="../lib/qunit-1.12.0/qunit.js"></script>
-  <script type="text/javascript" src="../lib/jquery-2.0.3.js"></script>
-  <script type="text/javascript" src="../lib/handlebars-1.0.0.js"></script>
-  <script type="text/javascript" src="../lib/ember-1.3.1.js"></script>
-  <script type="text/javascript" src="../lib/selectize-0.8.5/js/selectize.js"></script>
+
+  <script src="../bower_components/qunit/qunit/qunit.js"></script>
+  <script type="text/javascript" src="../bower_components/jquery/dist/jquery.js"></script>
+  <script type="text/javascript" src="../bower_components/handlebars/handlebars.js"></script>
+  <script type="text/javascript" src="../bower_components/ember/ember.js"></script>
+  <script type="text/javascript" src="../bower_components/selectize/dist/js/standalone/selectize.js"></script>
   
   <script type="text/javascript" src="../src/ember.selectize.js"></script>
   
